<resources>
    <string name="app_name">CDF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="about_us">
        "\nAround 70% of the poor in India are from rural areas where there is a lack of basic social"
        "and Infrastructural services, such as healthcare, roads, education and drinking water.\n\n"

        "Despite the presence of over 3,00,000 NGOs, India's growth has primalrily benefited its "
        "urban elite and middle class population who are engaged largely in the fast growing "
        "services sector.\n\n"

        "Inclusive and sustainable growth needs to be achieved in order to reduce poverty and other"
        " social and economic disparities, and to sustain economic growth.\n\n"

        "This is possible only by establishing a strong connection between rural and urban India "
        "for equitable and economic opportunities.\n\n"

        "Our vision\n"
        "Empowerment of youth and women in rural India through connectivity and "
        "entrepreneurship.\n\n\n"


        "Our Aim\n"
	    "Youth and women empowerment through health, technology, internet and entrepreneurship "
        "education.\n"
        "Creating new employment and business opportunities for women in rural areas through a "
        "technology-enabled village enterprise.\n"
        "Connecting villages and women groups with each other with use of simple, usable and "
        "relevant technology.\n\n"

        "Our Philosophy\n"
        "Assess needs, make simple user-friendly technology that can be woven into the fabric of "
        "rural India to make it relevant.\n"
        "Deploy technology enabled programs which are easily available across various devices so "
        "that people can use them in their day-to-day life. Examples of such devices: computers, "
        "tablets and mobile phones.\n"
        "Leverage the power of the Internet to impact peoples' lives.\n\n"

        "Our Approach\n"
        "We have 3 phased systematic approach which aims to achieve sustainable development through"
        " electronic and knowledge connectivity in villages leading to economic connectivity over "
        "a sustained period of time.\n\n"

    </string>
    <string name="contribute">
        <h1>"\nDonations to Connecting Dreams Foundation are exempt from income tax under section 80G "
        "of the Income Tax Act, 1962.\n\n"</h1>

        <b>"Transfer Online\n"</b>
        "Bank - Syndicate Bank\n"
        "Branch - Delhi CBSE Patparganj\n"
        "Account No: 90781010006399\n"
        "Beneficiary: Connecting Dreams Foundation, New Delhi\n"
        "IFSC Code:- SYNB0009092\n"
        "Send an email to:- info@connecting-dreams.org, Transaction ID, Your Name,"
        "Phone Number and Amount\n\n"

        <b>"Post a Cheque\n"</b>
        "Draw a cheque in favour of  Connecting Dreams Foundation  and deposit to Syndicate
        "Bank Account No: 90781010006399\n"
        "Send an email to:- info@connecting-dreams.org with Cheque number, Your Name,
        "Phone Number and Amount\n\n"

        <b>"Deposit in Cash\n"</b>
        "Deposit directly at any branch of Syndicate Bank to the credit of Connecting Dreams "
        "Foundation (Syndicate Bank Account No: 90781010006399)\n"
        "Send an email to:- info@connecting-dreams.org, Deposit Details, Your Name, Phone Number "
        "and Amount OR SMS details at 9899748528.\n\n"

        <b>"Directly to Connecting Dreams volunteer\n"</b>
        "Get in touch with any Connecting Dreams Foundation's volunteer and handover the details "
        "on your transaction, Cheque or cash directly to them. You can also contact the treasurer "
        "at:-info@connecting-dreams.org or fill your details at this link and he/she will contact "
        "you accordingly"\n\n



    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register">Register</string>
    <string name="emailpassword_title_text">Welcome to CDF</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_email" translatable="false">Enter Email</string>
    <string name="MobileNo">Mobile No.</string>
    <string name="name">Enter Name</string>
</resources>