<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_contact_us"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.ContactUs">

        <LinearLayout
            android:id="@+id/container_fragment"
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userNameTil"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_16" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/userEmailTil"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPhoneTil"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="@string/MobileNo"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:singleLine="true"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pincodeTil"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="Your Message"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_16" />
        </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register_step_1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_blue"
                android:gravity="center"
                android:text="Submit"
                android:onClick="submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:textStyle="normal"/>

            </LinearLayout>

        </LinearLayout>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Name"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="#000"-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/editText"-->
            <!--android:hint="Please enter your full name"-->
            <!--android:layout_below="@+id/textView2"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Email"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="#000"-->
            <!--android:id="@+id/textView3"-->
            <!--android:layout_below="@+id/editText"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:ems="10"-->
            <!--android:hint="Please enter your email id"-->
            <!--android:id="@+id/editText2"-->
            <!--android:layout_below="@+id/textView3"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignRight="@+id/editText"-->
            <!--android:layout_alignEnd="@+id/editText" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Mobile/Telephone Number"-->
            <!--android:id="@+id/textView4"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="#000"-->
            <!--android:layout_below="@+id/editText2"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="number"-->
            <!--android:ems="10"-->
            <!--android:hint="Please enter a contact number at which we can reach you"-->
            <!--android:id="@+id/editText3"-->
            <!--android:layout_below="@+id/textView4"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="Your Message Goes Here"-->
            <!--android:id="@+id/textView5"-->
            <!--android:textSize="17sp"-->
            <!--android:textColor="#000"-->
            <!--android:layout_below="@+id/editText3"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textMultiLine"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/editText4"-->
            <!--android:layout_below="@+id/textView5"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Submit"-->
            <!--android:onClick="submit"-->
            <!--android:id="@+id/button"-->
            <!--android:layout_marginTop="45dp"-->
            <!--android:layout_below="@+id/editText4"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->



</ScrollView>

